--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
                     <section></section>
                     <div class="row" id="currentstatus-1">
                         <div class="col">
-                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 02 October 2020</h3>
+                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 03 October 2020</h3>
                             <div class="row mt-4">
                                 <div class="col-lg-6 mb-4">
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Today's Positive</p>
                                             <p class="text-white-50 small m-0"></p>
-                                            <p class="text-white-50 small m-0">9258<br></p>
+                                            <p class="text-white-50 small m-0">7834<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -220,7 +220,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Total Positive</p>
-                                            <p class="text-white-50 small m-0">&nbsp;77489&nbsp;<br></p>
+                                            <p class="text-white-50 small m-0">&nbsp;-<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -229,7 +229,7 @@
                                         <div class="card-body">
                                             <p class="m-0">Contact cases</p>
                                             <p class="m-0"></p>
-                                            <p class="text-white-50 small m-0">8274</p>
+                                            <p class="text-white-50 small m-0">6850</p>
                                         </div>
                                     </div>
                                 </div>
@@ -237,7 +237,7 @@
                                     <div class="card text-white bg-success shadow">
                                         <div class="card-body">
                                             <p class="m-0">Patients Relieved</p>
-                                            <p class="text-white-50 small m-0">4092<br></p>
+                                            <p class="text-white-50 small m-0">4476<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -245,7 +245,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Unknown Sources</p>
-                                            <p class="text-white-50 small m-0">657</p>
+                                            <p class="text-white-50 small m-0">648</p>
                                         </div>
                                     </div>
                                 </div>
@@ -253,7 +253,7 @@
                                     <div class="card text-white bg-warning shadow">
                                         <div class="card-body">
                                             <p class="m-0">Death Rate</p>
-                                            <p class="text-white-50 small m-0">20</p>
+                                            <p class="text-white-50 small m-0">22</p>
                                         </div>
                                     </div>
                                 </div>
