--- a/quarantine.html
+++ b/quarantine.html
@@ -23,9 +23,9 @@
 
 <body id="page-top">
     <div id="wrapper">
-        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
+        <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 toggled">
             <div class="container-fluid d-flex flex-column p-0">
-                <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0">
+                <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 toggled">
                     <div class="container-fluid d-flex flex-column p-0">
                         <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
                             <div class="sidebar-brand-icon rotate-n-15"><i class="material-icons">ac_unit</i></div>
