--- a/index.html
+++ b/index.html
@@ -171,23 +171,6 @@
                                             <div class="text-uppercase text-info font-weight-bold text-xs mb-1"></div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="text-dark font-weight-bold h5 mb-0 mr-3"><span><a href="statewise.html#statewisedeathreport">Death Rate</a></span></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-auto"><i class="fas fa-chart-area fa-2x text-gray-300"></i></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-xl-3 mb-4">
-                            <div class="card shadow border-left-info py-2">
-                                <div class="card-body">
-                                    <div class="row align-items-center no-gutters">
-                                        <div class="col mr-2">
-                                            <div class="text-uppercase text-info font-weight-bold text-xs mb-1"></div>
-                                            <div class="row no-gutters align-items-center">
-                                                <div class="col-auto">
                                                     <div class="text-dark font-weight-bold h5 mb-0 mr-3"><span><a href="#todays-report">Current Status</a></span></div>
                                                 </div>
                                             </div>
@@ -197,7 +180,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-xl-3 mb-4"></div>
                     </div>
                     <div class="row">
                         <div class="col offset-sm-1"><img class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Statewise/reports/Overall.png?raw=true"></div>
@@ -205,14 +187,14 @@
                     <section></section>
                     <div class="row" id="currentstatus-1">
                         <div class="col">
-                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 03 October 2020</h3>
+                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 04 October 2020</h3>
                             <div class="row mt-4">
                                 <div class="col-lg-6 mb-4">
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Today's Positive</p>
                                             <p class="text-white-50 small m-0"></p>
-                                            <p class="text-white-50 small m-0">7834<br></p>
+                                            <p class="text-white-50 small m-0">8553<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -220,7 +202,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Total Positive</p>
-                                            <p class="text-white-50 small m-0">&nbsp;80825&nbsp;<br></p>
+                                            <p class="text-white-50 small m-0">&nbsp;-<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -229,7 +211,7 @@
                                         <div class="card-body">
                                             <p class="m-0">Contact cases</p>
                                             <p class="m-0"></p>
-                                            <p class="text-white-50 small m-0">6850</p>
+                                            <p class="text-white-50 small m-0">7527</p>
                                         </div>
                                     </div>
                                 </div>
@@ -237,7 +219,7 @@
                                     <div class="card text-white bg-success shadow">
                                         <div class="card-body">
                                             <p class="m-0">Patients Relieved</p>
-                                            <p class="text-white-50 small m-0">4476<br></p>
+                                            <p class="text-white-50 small m-0">4851<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -245,7 +227,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Unknown Sources</p>
-                                            <p class="text-white-50 small m-0">648</p>
+                                            <p class="text-white-50 small m-0">716</p>
                                         </div>
                                     </div>
                                 </div>
@@ -253,7 +235,7 @@
                                     <div class="card text-white bg-warning shadow">
                                         <div class="card-body">
                                             <p class="m-0">Death Rate</p>
-                                            <p class="text-white-50 small m-0">22</p>
+                                            <p class="text-white-50 small m-0">23</p>
                                         </div>
                                     </div>
                                 </div>
