--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
                     <section></section>
                     <div class="row" id="currentstatus-1">
                         <div class="col">
-                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 04 October 2020</h3>
+                            <h3 id="todays-report" class="container-fluid mt-5">Reports on 07 October 2020</h3>
                             <div class="row mt-4">
                                 <div class="col-lg-6 mb-4">
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Today's Positive</p>
                                             <p class="text-white-50 small m-0"></p>
-                                            <p class="text-white-50 small m-0">8553<br></p>
+                                            <p class="text-white-50 small m-0">10606<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -202,7 +202,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Total Positive</p>
-                                            <p class="text-white-50 small m-0">&nbsp;-<br></p>
+                                            <p class="text-white-50 small m-0">&nbsp;92168<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -211,7 +211,7 @@
                                         <div class="card-body">
                                             <p class="m-0">Contact cases</p>
                                             <p class="m-0"></p>
-                                            <p class="text-white-50 small m-0">7527</p>
+                                            <p class="text-white-50 small m-0">9542</p>
                                         </div>
                                     </div>
                                 </div>
@@ -219,7 +219,7 @@
                                     <div class="card text-white bg-success shadow">
                                         <div class="card-body">
                                             <p class="m-0">Patients Relieved</p>
-                                            <p class="text-white-50 small m-0">4851<br></p>
+                                            <p class="text-white-50 small m-0">6161<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -227,7 +227,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Unknown Sources</p>
-                                            <p class="text-white-50 small m-0">716</p>
+                                            <p class="text-white-50 small m-0">741</p>
                                         </div>
                                     </div>
                                 </div>
@@ -235,7 +235,7 @@
                                     <div class="card text-white bg-warning shadow">
                                         <div class="card-body">
                                             <p class="m-0">Death Rate</p>
-                                            <p class="text-white-50 small m-0">23</p>
+                                            <p class="text-white-50 small m-0">22</p>
                                         </div>
                                     </div>
                                 </div>
