--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Total Positive</p>
-                                            <p class="text-white-50 small m-0">&nbsp;-<br></p>
+                                            <p class="text-white-50 small m-0">&nbsp;90586<br></p>
                                         </div>
                                     </div>
                                 </div>
