--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Total Positive</p>
-                                            <p class="text-white-50 small m-0">&nbsp;-<br></p>
+                                            <p class="text-white-50 small m-0">95925<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -211,7 +211,7 @@
                                         <div class="card-body">
                                             <p class="m-0">Contact cases</p>
                                             <p class="m-0"></p>
-                                            <p class="text-white-50 small m-0">-</p>
+                                            <p class="text-white-50 small m-0">10471</p>
                                         </div>
                                     </div>
                                 </div>
@@ -219,7 +219,7 @@
                                     <div class="card text-white bg-success shadow">
                                         <div class="card-body">
                                             <p class="m-0">Patients Relieved</p>
-                                            <p class="text-white-50 small m-0">-<br></p>
+                                            <p class="text-white-50 small m-0">7570<br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -227,7 +227,7 @@
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
                                             <p class="m-0">Unknown Sources</p>
-                                            <p class="text-white-50 small m-0">-</p>
+                                            <p class="text-white-50 small m-0">952</p>
                                         </div>
                                     </div>
                                 </div>
@@ -235,7 +235,7 @@
                                     <div class="card text-white bg-warning shadow">
                                         <div class="card-body">
                                             <p class="m-0">Death Rate</p>
-                                            <p class="text-white-50 small m-0">-</p>
+                                            <p class="text-white-50 small m-0">23</p>
                                         </div>
                                     </div>
                                 </div>
