--- a/quarantine.html
+++ b/quarantine.html
@@ -95,7 +95,7 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-dark container-fluid">&nbsp; &nbsp;Quarantine Analysis</h3>
+                    <h3 class="text-dark container-fluid">Quarantine Analysis</h3>
                 </div><img id="quarantinecurrentstatuss" class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/quarantine/current_status.png?raw=true"><img class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/quarantine/consistant2day.png?raw=true">
                 <img
                     id="quarantinedistrictwise" class="img-fluid" src="https://github.com/ShoukkiyaAshraf/CovidData_From_Aug04/blob/master/Analysis_Districtwise/reports/quarantine/districcontrib.png?raw=true"></div>
