--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 <div class="col-lg-6 mb-4">
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
-                                            <p class="m-0">Today's Positive</p>
+                                            <p class="m-0">Covid'19 Analysis in Kerala from 04 Auguest 2020 to 12 October 2020</p>
                                             <p class="text-white-50 small m-0"></p>
                                             <p class="text-white-50 small m-0">5930</p>
                                         </div>
