--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </nav>
                     <div class="row">
                         <div class="col">
-                            <h2>Dashboard</h2>
+                            <h2>Covid'19 Analysis in Kerala from 04 Auguest 2020 to 12 October 2020</h2>
                         </div>
                     </div>
                     <div class="row sizemax">
@@ -192,7 +192,7 @@
                                 <div class="col-lg-6 mb-4">
                                     <div class="card text-white bg-danger shadow">
                                         <div class="card-body">
-                                            <p class="m-0">Covid'19 Analysis in Kerala from 04 Auguest 2020 to 12 October 2020</p>
+                                            <p class="m-0">Positive Cases</p>
                                             <p class="text-white-50 small m-0"></p>
                                             <p class="text-white-50 small m-0">5930</p>
                                         </div>
